[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbm-local"
version = "0.1.0"
description = "Computational Bayesian Modeling (CBM) tools: individual fits, BMS, HBI"
authors = [{ name = "CBM Authors" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["cbm"]
